Attemps to fix mobile overflow carousel

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,7 @@ body{
 }
 body.needsScroll{
   overflow-Y: auto;
+  position: static;
 }
 /* body.noScroll{
   height: 100vh;
